--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 # Gradle files
 .gradle/
 build/
+opencv_build_scripts/opencv/
 
 # Local configuration file (sdk path, etc)
 local.properties
+
+#macOS files
+.DS_Store
 
 # Log/OS Files
 *.log
