--- a/Android/opencvwrapperlib/build.gradle
+++ b/Android/opencvwrapperlib/build.gradle
@@ -29,7 +29,7 @@ android {
     }
     externalNativeBuild {
         cmake {
-            path "src/main/cpp/CMakeLists.txt"
+            path "../../CMakeLists.txt"
             version "3.22.1"
         }
     }
@@ -43,7 +43,7 @@ android {
 }
 
 nativeBundleExport {
-    headerDir = "${project.projectDir}/src/main/cpp/opencvwrapperlib.h"
+    headerDir = "${project.projectDir}/../../opencvwrapperlib/opencvwrapperlib.h"
 }
 
 dependencies {
